--- a/pages/index.html
+++ b/pages/index.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="\Styles\style.css">
     <title>Homepage</title>
 </head>
 <body>
+    <div class="header">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+    </div>
     <div class="images">
-        <img src="" alt="">
+        <img src="\images\beaver.png" alt="The Beaver">
+        <img src="\images\chicken.jpg" alt="The Chicken">
+        <img src="\images\elephant.jpg" alt="The Elephant">
+        <img src="\images\fish.png" alt="The Fish">
+        <img src="\images\horse.jpg" alt="The Horse">
+        <img src="\images\mouse.jpg" alt="The Mouse">
+        <img src="\images\wolf.jpg" alt="The Wolf">
+        <img src="\images\zebra.jpg" alt="The Zebra">
+    </div>
+    <div class="content">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac auctor augue mauris augue. Sit amet venenatis urna cursus eget. Dolor sit amet consectetur adipiscing elit. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae. Odio pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus. Nibh tortor id aliquet lectus. Sit amet nisl suscipit adipiscing bibendum est ultricies integer. Ac feugiat sed lectus vestibulum. Enim eu turpis egestas pretium aenean. Erat velit scelerisque in dictum non consectetur a. Mauris nunc congue nisi vitae suscipit tellus mauris. Eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Viverra orci sagittis eu volutpat odio. Scelerisque viverra mauris in aliquam sem fringilla. Faucibus pulvinar elementum integer enim neque volutpat ac tincidunt vitae. Purus in massa tempor nec feugiat. Non arcu risus quis varius quam quisque id. Volutpat est velit egestas dui id. Augue lacus viverra vitae congue. Sit amet dictum sit amet. Vitae congue mauris rhoncus aenean vel elit scelerisque mauris. Gravida arcu ac tortor dignissim convallis. Cras pulvinar mattis nunc sed blandit libero volutpat sed. Semper risus in hendrerit gravida rutrum quisque non tellus orci. Aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis. Mollis nunc sed id semper risus in. Urna condimentum mattis pellentesque id nibh. Aliquam ut porttitor leo a diam sollicitudin tempor. Eget gravida cum sociis natoque penatibus et. Pharetra diam sit amet nisl suscipit adipiscing bibendum. Tortor pretium viverra suspendisse potenti nullam ac tortor. Mi ipsum faucibus vitae aliquet nec ullamcorper sit. Sit amet consectetur adipiscing elit pellentesque habitant morbi tristique. Laoreet non curabitur gravida arcu ac tortor dignissim. Sem fringilla ut morbi tincidunt augue interdum velit euismod. Placerat orci nulla pellentesque dignissim enim sit amet. Dui nunc mattis enim ut tellus elementum. Libero volutpat sed cras ornare arcu dui vivamus. Nec nam aliquam sem et tortor consequat id porta nibh. Habitasse platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim. Porttitor massa id neque aliquam vestibulum morbi blandit. Molestie at elementum eu facilisis sed odio morbi. Lacus sed viverra tellus in hac. Lectus quam id leo in vitae. Consequat semper viverra nam libero justo. Tempus urna et pharetra pharetra massa massa ultricies. Nunc sed blandit libero volutpat sed. Mi proin sed libero enim sed faucibus turpis in eu. Non blandit massa enim nec dui. Quisque sagittis purus sit amet. Varius duis at consectetur lorem donec massa sapien faucibus. Fusce id velit ut tortor. Neque sodales ut etiam sit. In tellus integer feugiat scelerisque varius morbi. Ultricies lacus sed turpis tincidunt id aliquet risus feugiat in. Egestas maecenas pharetra convallis posuere morbi leo urna molestie. In fermentum et sollicitudin ac orci phasellus egestas tellus. Pretium nibh ipsum consequat nisl vel pretium lectus. Faucibus in ornare quam viverra orci sagittis eu volutpat odio. Consectetur adipiscing elit ut aliquam purus sit amet. Viverra vitae congue eu consequat ac felis donec et odio. Orci porta non pulvinar neque laoreet. Turpis tincidunt id aliquet risus feugiat. Amet dictum sit amet justo donec. Laoreet id donec ultrices tincidunt arcu non sodales neque sodales. Tristique et egestas quis ipsum suspendisse ultrices. Ut enim blandit volutpat maecenas. Adipiscing elit duis tristique sollicitudin nibh sit amet. Eu ultrices vitae auctor eu augue. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Diam vel quam elementum pulvinar etiam non quam lacus. Sed libero enim sed faucibus turpis in eu mi. Erat imperdiet sed euismod nisi porta lorem mollis aliquam ut. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor magna. Sed euismod nisi porta lorem mollis. Turpis massa sed elementum tempus egestas sed. Aliquam vestibulum morbi blandit cursus risus at ultrices. Morbi tristique senectus et netus et malesuada. Ac tincidunt vitae semper quis lectus. Dui vivamus arcu felis bibendum ut tristique et egestas quis.
+        </p>
     </div>
 </body>
 </html>
